# data-bridge

./: .gitignore  .pre-commit-config.yaml  404.html  BEANIE_COMPARISON.md  CLAUDE.md  Cargo.toml  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PERFORMANCE_IMPROVEMENTS.md  README.md  ROADMAP.md  index.html  justfile  profile_operations.py  pyproject.toml  sitemap.xml  test_insert_many.py  tox.ini
.claude/: settings.local.json
benchmarks/: bench_postgres_comparison.py
crates/data-bridge/: Cargo.toml
crates/data-bridge-common/: Cargo.toml
crates/data-bridge-common/src/: error.rs  lib.rs
crates/data-bridge-http/: Cargo.toml
crates/data-bridge-http/src/: client.rs  config.rs  error.rs  lib.rs  request.rs  response.rs
crates/data-bridge-mongodb/: Cargo.toml
crates/data-bridge-mongodb/src/: connection.rs  document.rs  lib.rs  query.rs
crates/data-bridge-postgres/: Cargo.toml  README.md
crates/data-bridge-postgres/src/: connection.rs  lib.rs  migration.rs  query.rs  row.rs  schema.rs  transaction.rs  types.rs
crates/data-bridge-postgres/tests/: test_row_crud.rs
crates/data-bridge-test/: Cargo.toml
crates/data-bridge-test/src/: assertions.rs  benchmark.rs  http_server.rs  lib.rs  reporter.rs  runner.rs
crates/data-bridge/src/: config.rs  error_handling.rs  http.rs  lib.rs  mongodb.rs  postgres.rs  test.rs  validation.rs
en/user-guide/: index.html
kb/: dbtest-architecture.md  index.md
kb/00-overview/: 00-index.md  01-roadmap.md
kb/40-postgres/: index.md
kb/dbtest/: README.md  architecture.md  components.md  data-flows.md  implementation.md  state-machines.md
python/data_bridge/: __init__.py  _engine.py  actions.py  document.py
python/data_bridge/postgres/: __init__.py  columns.py  connection.py  migrations.py  query.py  table.py  transactions.py
python/data_bridge/test/: __init__.py  benchmark.py  cli.py  decorators.py  http_benchmark.py  suite.py
search/: search_index.json
specs/004-performance-optimization/: impl-log.md  spec.md
specs/101-cow-state-management/: impl-log.md  plan.md  spec.md  tasks.md
specs/102-lazy-validation/: plan.md  spec.md  tasks.md
specs/103-fast-path-bulk-ops/: plan.md  spec.md  tasks.md
specs/104-rust-query-execution/: plan.md  spec.md  tasks.md
specs/105-type-schema-extraction/: plan.md  spec.md  tasks.md
specs/106-basic-type-validation/: plan.md  spec.md  tasks.md
specs/107-complex-type-validation/: plan.md  spec.md  tasks.md
specs/108-constraint-validation/: plan.md  spec.md  tasks.md
specs/901-http-client/: plan.md  spec.md  tasks.md
specs/902-test-framework/: plan.md  spec.md  tasks.md
specs/_archive/002-data-bridge-performance/: plan.md  spec.md
specs/_archive/003-rust-type-validation/: spec.md
specs/_archive/004-rust-link-relations/: spec.md
specs/_archive/005-rust-embedded-documents/: spec.md
specs/_archive/006-rust-document-inheritance/: spec.md
specs/_archive/007-rust-migrations/: spec.md
specs/_archive/008-rust-query-builder/: spec.md
src/data_bridge/: __init__.py
src/data_bridge/base/: __init__.py  fields.py  manager.py  metaclass.py  model.py  query.py
src/data_bridge/base/backends/: __init__.py  async_.py  base.py  sync.py
tests/: run_coverage.py
tests/common/: test_connection.py  test_constraints.py  test_state_tracker.py
tests/integration/: conftest.py  test_constraint_validation.py
tests/mongo/benchmarks/: bench_delete.py  bench_find_many.py  bench_find_one.py  bench_insert.py  bench_update.py  conftest.py
tests/mongo/unit/: test_embedded.py  test_hooks.py  test_inheritance.py  test_migrations.py  test_queries.py  test_relations.py  test_security.py  test_timeseries.py
tests/postgres/benchmarks/: bench_find.py  bench_insert.py  bench_update.py  benchmark_setup.py  conftest.py
tests/postgres/benchmarks/results/: full_results
tests/postgres/unit/: test_crud_operations.py
zh-tw/user-guide/: index.html
