[package]
name = "data-bridge-http"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance async HTTP client for Python with Rust backend"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
chrono.workspace = true
regex.workspace = true

# HTTP-specific
reqwest.workspace = true
http.workspace = true
url.workspace = true
bytes.workspace = true

# Shared utilities
data-bridge-common = { path = "../data-bridge-common" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
