[package]
name = "data-bridge-mongodb"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true

# MongoDB-specific
mongodb.workspace = true
bson.workspace = true
chrono.workspace = true

# Shared utilities
data-bridge-common = { path = "../data-bridge-common", features = ["mongodb-errors"] }

[dev-dependencies]
tokio-test = "0.4"
